--- a/admin_authentication.yaml
+++ b/admin_authentication.yaml
@@ -11,7 +11,7 @@
     validate_certs: no  # To be set to yes later to use internal CA cert
     return_content: yes
   register: login_response
-  no_log: true  # Hide credentials in log
+  no_log: false  # Hide credentials in log
 - name: Extract DAST admin token                      #Extract token from login response
   set_fact:
     dast_token: "{{ login_response.json.token }}"
